# public/openapi.yaml
@@ -10,7 +10,6 @@ servers:
   - url: https://terminal.teamstinky.duckdns.org/
 paths:
   /set-server:
-  /set-server:
     post:
       summary: Set the active server and manage alias settings.
       description: >
@@ -56,7 +55,6 @@ paths:
       description: >
         Executes a specified command in a given directory and shell environment on the currently set server.
         This endpoint is ideal for running shell commands remotely and retrieving the output directly through the API.
-        It supports dynamic command execution, providing flexibility and powerful interaction with the server's OS.
       operationId: runCommand
       x-openai-isConsequential: false
       requestBody:
@@ -112,7 +110,7 @@ paths:
       description: >
         Retrieves extra pages from the output of a command that exceeded the single response size limit. This is
         crucial for handling large outputs systematically, allowing the client to paginate through results as needed.
-      operationId: retrieveExtraResponsePages
+      operationId: retrieveResponsePage
       x-openai-isConsequential: false
       parameters:
         - name: id
@@ -137,14 +135,14 @@ paths:
         "404":
           description: Response not found.
 
-  /set-current-directory:
+  /set-working-directory:
     post:
       summary: Set the working directory for command execution.
       description: >
         Sets the current working directory for executing commands. This ensures that all commands run subsequently
         are executed in the context of the specified directory, mimicking the behavior of changing directories in a
         traditional shell environment.
-      operationId: setCurrentDirectory
+      operationId: setWorkingDirectory
       x-openai-isConsequential: false
       requestBody:
         required: true
@@ -179,11 +177,12 @@ paths:
                     type: string
   /execute-command:
     post:
-      summary: Execute a command on the SSM managed server.
+      summary: Execute a command on the managed server.
       description: >
-        Executes a specified shell command on a managed server via SSM. This method allows specifying the command,
+        Executes a specified shell command on a managed server. This method allows specifying the command,
         the timeout, and the directory from which the command should be executed.
-      operationId: executeSsmCommand
+      operationId: executeCommand
+      x-openai-isConsequential: false
       requestBody:
         required: true
         content:
@@ -220,6 +219,8 @@ paths:
       description: >
         Lists files from a specified directory on a server managed via SSM. This endpoint supports pagination and ordering
         of the file listing results.
+      operationId: listFiles
+      x-openai-isConsequential: false
       parameters:
         - name: directory
           in: query
@@ -257,11 +258,12 @@ paths:
                   type: string
   /create-file:
     post:
-      summary: Create or replace a file on the SSM managed server.
+      summary: Create or replace a file on the managed server.
+      x-openai-isConsequential: false
       description: >
         Creates a new file or replaces an existing file in the specified directory with the provided content.
         This endpoint allows optionally backing up the existing file before overwriting.
-      operationId: createSsmFile
+      operationId: createFile
       requestBody:
         required: true
         content:
@@ -289,14 +291,14 @@ paths:
                 properties:
                   error:
                     type: string
-
   /update-file:
     post:
-      summary: Update an existing file on the SSM managed server.
+      summary: Update an existing file on the managed server.
       description: >
         Updates an existing file at the specified path by replacing specified patterns with new content.
         Optionally backs up the file before making changes.
-      operationId: updateSsmFile
+      operationId: updateFile
+      x-openai-isConsequential: false
       requestBody:
         required: true
         content:
@@ -356,3 +358,20 @@ components:
           type: boolean
           description: Whether to backup the existing file before creating or replacing the new one. Defaults to false.
           default: false
+    ListServersResponse:
+      type: object
+      properties:
+        servers:
+          type: array
+          items:
+            type: string
+          description: The list of available servers.
+    ResponsePage:
+      type: object
+      properties:
+        responseId:
+          type: string
+        page:
+          type: integer
+        data:
+          type: string
